--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource-variable/jetbrains-mono": "^5.2.8",
     "@fontsource/blinker": "^5.2.8",
-    "lucide-static": "^0.563.0"
+    "lucide": "^0.563.0"
   }
 }
